Issue #3157235: Change custom back-end styling to usee Gin root: CSS variables. so that they will switch with the Light and Dark mode. And removed left-over claro styling

--- a/scss/theme/vartheme-claro.theme.style.scss
+++ b/scss/theme/vartheme-claro.theme.style.scss
@@ -46,10 +46,14 @@ body.path-admin .panel.dashboard-block {
   display: block;
   margin-top: var(--gin-spacing-m);
   margin-bottom: var(--gin-spacing-m);
-  border: 1px solid rgba(216, 217, 224, 0.8);
+  border: var(--gin-border-xxs) solid var(--gin-border-color-layer2);
   border-radius: var(--gin-border-xxs);
   background-color: var(--gin-bg-layer3);
   box-shadow: var(--gin-shadow-l1);
+
+  p {
+    padding: var(--gin-spacing-m);
+  }
 }
 
 .block-views-blockvarbase-google-analytics-summary-sessions-and-pageviews {
